<resources>
    <string name="app_name">Interactive Scriptures (Premium) </string>
    <string name="title_activity_main2">Introduction: Genesis with Sound and Rhythm</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_splash_screen_welcome">Interactive Scriptures Welcome</string>
    <string name="dummy_button">Begin the sound filled experience</string>
    <string name="dummy_content">Welcome.\n  Feel free to explore and examine communication through music:\n into the origin of \ncreation.</string>
    <string name="title_activity_scrolling_learning_sound">"Developer's interpretation of Part 1</string>
    <string name="large_text">
The first statements of Genesis is: "In the beginning, God created the heavens and the earth."

"When reading this text, one must remember, that Mose’s interpretation of Genesis is profound and detailed, but, limited by Mose’s time, humanity, language, and understanding of his world.   Mose’s thinking and analysis seeks to explain something far greater than any human can fully comprehend. In fact, humanity is still trying to understand Genesis or the beginning of creation.  Modern scientists also ask the same questions. Althought, they must continuously reinterpret their findings to get a better understanding of their observations. In addition, no experiment or collection of data is absolute, perfect, and captures all of what is occurring. All experiments have blind spots and caveats in various forms.  How do we interpret God/universe within our own religions, (and this may differ from person to person in close sects within their religion)?
        With this said, through the author Moses, we know just a little about the beginning of the universe.  These verses also allude to the beginning of God himself.  Now lets also imagine God speaking to Moses and explaining to him about the beginning of our universe.  Imagine explaining what we know about science to someone who thinks that the earth flat.  You may also have trouble discussing to them  nuclear fission, planetary gravity: or even more specifically accretion, the coming together of particles into planetary and heavenly bodies… Very difficult?  Also, Moses would have had to understand temperature and its relationship with matter.  We presume that Moses did not know these concepts, especially in the way that we know them now.  But I think he knew what was revelant for him.

        Let us begin interpreting the scripture, through written language.

        After the intro, the text begins,  ‘the Earth was without form, void’.   At this point in creation, the earth has not been created.  The form of the Earth can be interpreted figuratively and literally.  As this corresponds to scientific knowledge of the Earth’s formation, the earth’s origins, although not formed, existed as God existed.  Meaning that God had to guide the creation of the Earth as we know it.  Alternatively,  you could also perceive it as God did not have a plan for earth at that moment in the Universe, so it was without form in both intelligent design and actual existence.  Ultimately,  there is no Earth in Part 1.

        The text then goes on to state: ‘and darkness was upon the face of the deep.'.

        Now God also reveals through Moses that it was dark and that the darkness was deep.  The opposite of dark is light, and light itself is partially a form of energy.  Further, energy and light is related to mass, from the equation, E=mc2.  If you shine a flashlight, the light shining is energy from electricity flowing through the bulb.  If you light a candle that is the light emitted from energy released from a chemical reaction in the wick.  So from this information, if you do not have light, you do not have energy.  Alternatively, darkness could also be the result of too much mass which has gravity.  Gravity, which brings things together is studied by astronomers. At extreme gravity, found in black holes, the gravity is so strong that even light itself can not escape its pull.

        So in the beginning, it can also be viewed as God with all power, in control/encompassing everything as he is, may have accumulated so much immense power or (gravity?) that light did not escape out into the universe.  It was almost as if it was bound up, chained, and stuck to God, in the midst of darkness.

        In the next statement, “the Spirit of God moved upon the face of the waters” is a first indication that God is 'alive', conscious, or simply aware of his surroundings.  Now,  God is still in this extremely dark place.  But now, God can now move.

        Now, what is the water that Moses discusses?  There are at least two facts in relation to this question. First,  water is made up of hydrogen and oxygen,  H2O.  Hydrogen is the smallest element in the Universe and hydrogen is also the most abundant element in the universe.  Another fact is that the early universe was so hot that matter was more fluid in nature, just like water.  Astronomers have recently obtained evidence of the Universe at a very early stage with extremely powerful telescopes that can view astronomical structures very deep and far into the sky.  Their technology is so advanced, that they can even capture light or (microwaves) emitted in the early beginning stages of the Universe’s creation.  These telescopes show an ancient snapshot of the universe, not of stars but of fluid-like converged matter jumbled together in extreme heat.  (Only when the universe started to cool and expand  is when the radiation became visible  for astronomers to observe.)

        I always had the question of what was that water.  The actual water that we know of on Earth is brought up later in this chapter that is not presented in the App  in Part 1.  Although humans are fascinated by water,  Moses was correct regardless, especially in how he describes water without form and independent of light, planets, and heavenly bodies.  Moses explained it in a form that could be understood by many generations and is supported by findings from Science today.

        Now, these are my personal feeling that I got from the text of Genesis that is not related to science.

        Darkness can be related to us too.  Especially individuals being in a dark spaces in their lives.  In addition, whole nations and groups of people could also be in dark spaces.   Can you think of how many things went wrong and how bad things additively came together to create, just a ‘hot mess’ of situation, problem, or dilemma that you have experienced?

        But in this text, what did God do in the deep darkness, and in the hot gravity filled ‘water’ of the Universe?  He moved upon the face of it.  I like to think of it, as he faced the situation and did not cower away.  The original Hebrew text word describing his movements as rachaph, (raw chaf).  It means to move or flutter, but it also means to brood and to be relaxed.  Just imagine the immense amount of gravity that God had to command.  In addition, the amount of gravity at that level could not let any light out, but God faced it and directed it so that it eventually did.

        But when does the light come?  What if you are moving or ‘trying’ (as God) and you are doing the best in a situation, and darkness still persists?  When is this darkness over? I personally feel when you can command your inner self to say that there is light.  I don’t mean by just words or just a mindset, it is inward where this darkness will not overcome you.

        When God said let there be light, he said it, regardless of if he could see that light immediately.  Even in the text,  there is a separation of God proclaiming light and God seeing the light.  Light in a situation is not the situation itself, it is your perception of it.  (As in the text) God did not see the darkness, (he may have ignored it),the text only describes him seeing the light.  So after God declared let there be light and it formed, it was regardless of if he could see it or not.  Regardless of time, the light was formed.

        And then the scripture goes  on to  say, ‘and it was good.’

        Sometimes there is false light or more attractive light that is not good.  God made sure that this light was authentic.  If you look in the scriptures, this light is not from the heavens as we know it.  This light is not from stars.  This is the inner light of God, (which we will go in depth further).  This light made way for the actual sun and the stars to form.   And most of all this light was true and good light. This light was and is not shallow nor is it changeable, it is a pressing penetrating, unstoppable, and it possibly is invisible.

        For myself, I am thankful for God overcoming gravity, overcoming darkness; overcoming time so that we may have light, existence, and the phase shift of our universe and all of the protections that caused the creation of the Universe as we know it.   Even if you don’t believe in God, existence itself is incredible, what if, God and/or the universe actually came from nothing and that God and God’s creation was in a perpetual state of wanting to go back to nothing (kind of similar to Hess’s law)?

        Again, I thank you God who is incredible and is deserving of an incredible praise. "

    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_demonstration_of_sounds">Demonstration_of_sounds</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Sound_1">Sine wave</string>
    <string name="Sound_2">Square wave</string>
    <string name="Sound_3">Saw wave</string>
    <string name="Sound_4">Other_wave</string>
    <string name="Sound_5">Other_wave</string>
    <string name="part3_intro">"Here is where fundamental learning begins, applying your knowledge.  This will be a little different than typical questions. Instead of responding by language,you will respond by musical sounds.  Let's begin. \n\n"</string>
    <string name="text88">Press the continue button. </string>
    <string name="text89">   Developer’s answer:  This is where multiple sounds could explain this and you would have to incorporate time in the solution.  Also, the sounds must play simultaneously play.  So let’s break this down.   You have flesh eating parasites that eat away at tissue in a human eye. The act of eating away at the tissue should be represented by a sawtooth wave (of friction) which is the second dominant sound.  This sawtooth gradually diminishes as more of the eyesight is gone.
Next, the square sound that represents the definition of visual images is being decreased as the parasite eats at the eye.   The square waveform would be the predominant waveform initially.  Because of the parasite, the Square waveform is now replaced by the Sine waveform. As you recall the Sine waveform represents  no defining points and more of a blur in visual images.   Play the synth to hear the sound representation.   Additional factors can contribute to this model or the answer.  You could also think of how drug, age of the victim, location of the parasites, and  etc.  impacts each of the elements.   Alternatively,   there can also be a differential equation generated by this same problem.  Nevertheless,  sound may have an advantage in being more approachable, and it also has different qualities in its capabilities in diversity of parameters  that can aid in finding solutions and treatment\n\n.
 </string>
</resources>